# auto-correct

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test-page.html  vite.config.ts  vitest.config.ts
.github/workflows/: porter-app-3877-docker.yml
autocorrect-extension/: manifest.json
docker/: Dockerfile  download-ngrams.sh  fly.toml
docker/load-tests/: 300users.js  README.md  baseline.js  run.sh  stress.js  target.js
grammar-rs/: .dockerignore  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  entrypoint.sh  fly.toml  missing.md
grammar-rs/examples/: test_download.rs
grammar-rs/scripts/: compress_and_upload_ngrams.sh
grammar-rs/src/: lib.rs
grammar-rs/src/checker/: compound_checker.rs  dynamic_pattern_checker.rs  mod.rs
grammar-rs/src/checker/data/: en_added.rs  en_antipatterns.rs  en_coherency.rs  en_common_words.rs  en_compounds.rs  en_confusion.rs  en_confusion_extended.rs  en_confusion_l2_de.rs  en_confusion_l2_es.rs  en_confusion_l2_fr.rs  en_confusion_l2_nl.rs  en_context_words.rs  en_contractions.rs  en_determiners.rs  en_diacritics.rs  en_disambig_pos.rs  en_disambig_skip.rs  en_ignore.rs  en_multiwords.rs  en_ngram_words.rs  en_numbers.rs  en_partlycountable.rs  en_pattern_tests.rs  en_patterns.rs  en_pos_patterns.rs  en_prohibit.rs  en_proper_nouns.rs  en_replace.rs  en_spelling.rs  en_style.rs  en_synonyms.rs  en_uncountable.rs  en_us_gb.rs  en_word_definitions.rs  fr_antipatterns.rs  fr_common_words.rs  fr_complex_patterns.json  fr_compounds.rs  fr_confusion.rs  fr_disambig_pos.rs  (+12 more)
grammar-rs/src/core/: pipeline.rs
grammar-rs/src/language_model/: downloader.rs  mod.rs  parallel_downloader.rs
grammar-rs/tests/: api.rs
grammar-rs/tests/k6/: README.md  corpus.js  load-test-cached.js  load-test-nocache.js  load-test.js  templates.js  text-generator.js
public/: manifest.json
scripts/: compare-performance.js  release.sh
src/background/: service-worker.ts
src/content/: index.ts  language-tool-client.ts  position-map.ts  text-field-manager.ts  underline-renderer.ts
src/popup/: Popup.tsx  index.html  main.tsx  styles.css
src/shared/: messaging.ts  storage.ts  types.ts
test/: test-page.html
tests/e2e/: extension.spec.ts  fixtures.ts
tests/unit/: position-map.test.ts
