[package]
name = "grammar-rs"
version = "0.1.0"
edition = "2021"
description = "Ultra-fast grammar checker in Rust"
license = "MIT"

[features]
default = []
# Enable auto-download of N-gram data from R2 (basic single-connection)
ngram-download = ["dep:ureq", "dep:sha2"]
# Enable fast parallel download with compression support
ngram-download-fast = ["dep:reqwest", "dep:sha2", "dep:zstd", "dep:futures"]

[dependencies]
fst = "0.4"              # FST pour dictionnaires ultra-rapides
quick-xml = "0.31"       # Parser XML pour grammar.xml
chrono = "0.4"           # Timestamps pour fichiers générés
aho-corasick = "1.0"     # Multi-pattern matching
regex = "1.10"           # Regex for context-sensitive rules
flate2 = "1.0"           # DEFLATE decompression for Lucene stored fields
lz4_flex = "0.11"        # LZ4 decompression for Lucene 4.1 stored fields
bincode = "1.3"          # Binary serialization for N-gram cache
memmap2 = "0.9"          # Memory-mapped files for compact N-gram storage
rayon = "1.10"           # Parallel iteration for multi-core CPU usage

# Optional: N-gram auto-download from R2 (basic)
ureq = { version = "2.9", optional = true }  # HTTP client for downloading
sha2 = { version = "0.10", optional = true } # SHA256 checksum verification

# Optional: Fast parallel download with compression (ngram-download-fast)
reqwest = { version = "0.12", features = ["stream"], optional = true }
zstd = { version = "0.13", optional = true }
futures = { version = "0.3", optional = true }

# API dependencies
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"

[[bin]]
name = "grammar-check"
path = "src/bin/cli.rs"

[[bin]]
name = "build-dict"
path = "src/bin/build_dict.rs"

[[bin]]
name = "convert-lt-rules"
path = "src/bin/convert_lt_rules.rs"

[[bin]]
name = "sync-lt"
path = "src/bin/sync_lt.rs"

[[bin]]
name = "grammar-api"
path = "src/bin/api/main.rs"

[[bench]]
name = "tokenizer"
harness = false

[[bench]]
name = "spell_checker"
harness = false

[[bench]]
name = "rules"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "filters"
harness = false
